# camera_aravis

./: CMakeLists.txt  README.md
cmake/: FindAravis.cmake
src/: camnode.cpp
